# fin-research-agents

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
fin_research_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: pipeline_walkthrough.ipynb  scratch_agents_and_graph.ipynb  scratch_data_and_rag.ipynb
src/fin_agents/: cli.py  config.py  mcp_server.py
src/fin_agents/agents/: fundamentals_agent.py  graph.py  news_agent.py  orchestrator.py  rag_agent.py  state.py  synthesis_agent.py
src/fin_agents/data/: filings.py  fundamentals.py  news.py
src/fin_agents/rag/: ingest.py  retriever.py
src/fin_research_agents.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_agents.py  test_data.py  test_rag_retrieval.py
